feat: add patch API for the deployment
