# openapi.yml
@@ -444,8 +444,6 @@ paths:
           $ref: '#/components/responses/401Unauthorized'
         '403': 
           $ref: '#/components/responses/403Forbidden'
-        '409':
-          $ref: '#/components/responses/409Conflict'
         '500':
           $ref: '#/components/responses/500InternalError'
     post:
@@ -481,9 +479,12 @@ paths:
           $ref: '#/components/responses/401Unauthorized'
         '403': 
           $ref: '#/components/responses/403Forbidden'
+        '409':
+          $ref: '#/components/responses/409Conflict'
+          description: The deployment number is conflicted.
         '422':
-          description: The deployment payload or the configuration are invalid.
           $ref: '#/components/responses/422UnprocessableEntity'
+          description: The deployment payload or the configuration are invalid.
         '500':
           $ref: '#/components/responses/500InternalError'
   /repos/{id}/deployments/{number}:
@@ -558,8 +559,50 @@ paths:
           $ref: '#/components/responses/403Forbidden'
         '404': 
           $ref: '#/components/responses/404NotFound'
+        '422':
+          $ref: '#/components/responses/422UnprocessableEntity'
+          description: The configuration is invalid or it is not approved.
         '500':
           $ref: '#/components/responses/500InternalError'
+  /repos/{id}/deployments/{number}/rollback:
+    post:
+      tags:
+        - Repo
+      summary: Rollback by the deployment.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            description: The repository id
+        - in: path
+          name: number
+          required: true
+          schema:
+            type: integer
+            description: The deployment number.
+      responses:
+        '201':
+          description: Rollbacked Deployment
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Deployment'
+        '401': 
+          $ref: '#/components/responses/401Unauthorized'
+        '403': 
+          $ref: '#/components/responses/403Forbidden'
+        '404': 
+          $ref: '#/components/responses/404NotFound'
+        '409':
+          $ref: '#/components/responses/409Conflict'
+        '422':
+          description: The deployment number or the configuration is invalid.
+          $ref: '#/components/responses/422UnprocessableEntity'
+        '500':
+          $ref: '#/components/responses/500InternalError'
+
   /repos/{id}/deployments/{number}/approvals:
     get:
       tags:
@@ -666,46 +709,6 @@ paths:
           $ref: '#/components/responses/404NotFound'
         '500':
           $ref: '#/components/responses/500InternalError'
-
-  /repos/{id}/deployments/{number}/rollback:
-    post:
-      tags:
-        - Repo
-      summary: Rollback by the deployment.
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: integer
-            description: The repository id
-        - in: path
-          name: number
-          required: true
-          schema:
-            type: integer
-            description: The deployment number.
-      responses:
-        '201':
-          description: Rollbacked Deployment
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Deployment'
-        '401': 
-          $ref: '#/components/responses/401Unauthorized'
-        '403': 
-          $ref: '#/components/responses/403Forbidden'
-        '404': 
-          $ref: '#/components/responses/404NotFound'
-        '409':
-          $ref: '#/components/responses/409Conflict'
-        '422':
-          description: The deployment number or the configuration is invalid.
-          $ref: '#/components/responses/422UnprocessableEntity'
-        '500':
-          $ref: '#/components/responses/500InternalError'
-
   /repos/{id}/config:
     get:
       tags:
